Fixed the issue with misaligning Hover Editor Text lines

--- a/obsidian.css
+++ b/obsidian.css
@@ -1054,7 +1054,7 @@ body.theme-dark.pt-color-scheme-pine-dt {
 .search-result-file-match-destination-file {
   margin: 0 0 5px;
 }
-.workspace-leaf.mod-active .view-header,
+.workspace-leaf.mod-active div.view-header,
 .plugin-sliding-panes-rotate-header .workspace > .mod-root > .workspace-leaf.mod-active > .workspace-leaf-content > div.view-header {
   border: var(--border-size) solid;
   border-radius: var(--border-radius);
@@ -4517,7 +4517,6 @@ body:not(.is-grabbing) .nav-folder-title:hover {
   border: 2px solid var(--table-border-color);
   border-radius: var(--border-radius);
   box-shadow: var(--drop-shadow-popup);
-  transform: scale(0.9);
 }
 .popover.hover-popover .markdown-embed {
   height: 491px;
