--- a/src/scss/User Interface/Accent Color/accentStyleBase.scss
+++ b/src/scss/User Interface/Accent Color/accentStyleBase.scss
@@ -24,7 +24,7 @@
 	margin: 0 0 5px;
 }
 
-.workspace-leaf.mod-active .view-header,
+.workspace-leaf.mod-active div.view-header,
 .plugin-sliding-panes-rotate-header .workspace > .mod-root > .workspace-leaf.mod-active > .workspace-leaf-content > div.view-header {
 	border: var(--border-size) solid;
 	border-radius: var(--border-radius);
