--- a/src/scss/User Interface/Popups/filePreviewPopover.scss
+++ b/src/scss/User Interface/Popups/filePreviewPopover.scss
@@ -11,7 +11,6 @@
 		border: 2px solid var(--table-border-color);
 		border-radius: var(--border-radius);
 		box-shadow: var(--drop-shadow-popup);
-		transform: scale(0.9);
 
 		.markdown-embed {
 			height: 491px;
